@@ -16,6 +16,7 @@ NEWS
   * Fix conditional interpretation of core options
   * Enable escaping of % and $ in redirect/rewrite; only two cases changed their behaviour: "%%" => "%", "$$" => "$"
   * Fix accesslog port (should be port from the connection, not the "server.port") (#1618)
+  * Fix mod_fastcgi prefix matching: match the prefix always against url, not the absolute filepath (regardless of check-local)
 
 - 1.4.19 - 2008-03-10
 
